manifests/penpot/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penpot-tailscale
  namespace: penpot
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penpot
                port:
                  number: 8080
  tls:
    - hosts:
        - penpot
